fixed gap errors and twitter icon

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,7 +7,7 @@
 
 .topPart {
   display: flex;
-  gap: 150;
+  gap: 150px;
 }
 
 .topPartLeftColumn {
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 16;
+  gap: 16px;
 }
 .service {
   color: white;
@@ -71,7 +71,7 @@
 }
 .divWithLocations {
   display: flex;
-  gap: 32;
+  gap: 32px;
 }
 .divWithLocation {
   max-width: 260px;
