--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -13,6 +13,6 @@
 
 .headerButtonsDiv {
   display: flex;
-  gap: 12;
+  gap: 12px;
   margin-right: 28px;
 }
