--- a/src/components/specialisationSection/specialisationSection.module.css
+++ b/src/components/specialisationSection/specialisationSection.module.css
@@ -47,7 +47,7 @@
   padding-left: 16px;
   padding-right: 16px;
   flex-wrap: wrap;
-  gap: 10;
+  gap: 10px;
   margin-top: 72px;
 }
 
