--- a/src/components/ui/button/button.module.css
+++ b/src/components/ui/button/button.module.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 6;
+  gap: 6px;
   font-size: 14px;
   font-weight: 600;
   border-radius: 8px;
