--- a/src/components/workSection/workSection.module.css
+++ b/src/components/workSection/workSection.module.css
@@ -49,7 +49,7 @@
   margin-top: 120px;
   display: flex;
   justify-content: space-between;
-  gap: 180;
+  gap: 180px;
 }
 
 .bottomAreaLeftColumn {
@@ -96,7 +96,7 @@
 .bottomAreaRightColumn {
   display: flex;
   flex-direction: column;
-  gap: 48;
+  gap: 48px;
 }
 
 .divWithWorkHeading {
